Fix spacing in feedback.html

--- a/shared/scss/base/_forms.scss
+++ b/shared/scss/base/_forms.scss
@@ -15,6 +15,7 @@
 
 .frm__label__chk {
     margin-top: 0.1em;
+    margin-right: .5em;
     display: inline-block;
     vertical-align: top;
 }
